--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.5.0",
     "final-form": "^4.20.1",
     "final-form-focus": "^1.1.2",
+    "firebase": "^8.2.1",
     "fontsource-roboto": "^3.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
