--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.2",
+    "react-redux-firebase": "^3.8.1",
     "react-scripts": "4.0.1",
+    "redux-first-router": "^2.1.5",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
