--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.2",
+    "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.8.1",
     "react-scripts": "4.0.1",
     "redux-first-router": "^2.1.5",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "plop": "^2.7.4"
+    "plop": "^2.7.4",
+    "standard": "^16.0.3"
   }
 }
