--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux-firebase": "^3.8.1",
     "react-scripts": "4.0.1",
     "redux-first-router": "^2.1.5",
+    "redux-first-router-link": "^2.1.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
