--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^8.2.1",
     "fontsource-roboto": "^3.1.5",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.2",
     "react-redux": "^7.2.2",
