--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "date-fns": "^2.17.0",
     "final-form": "^4.20.1",
     "final-form-focus": "^1.1.2",
     "firebase": "^8.2.1",
