--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "final-form-focus": "^1.1.2",
     "firebase": "^8.2.1",
     "fontsource-roboto": "^3.1.5",
+    "re-reselect": "^4.0.0",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
