--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "final-form-focus": "^1.1.2",
     "firebase": "^8.2.1",
     "fontsource-roboto": "^3.1.5",
+    "mapbox-gl": "^2.3.0",
     "re-reselect": "^4.0.0",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
