--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.2",
+    "react-map-gl": "^6.1.16",
+    "react-mapbox-gl": "^5.1.1",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.8.1",
     "react-scripts": "4.0.1",
