--- a/package.json
+++ b/package.json
@@ -3,35 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.2",
-    "@material-ui/data-grid": "^4.0.0-alpha.14",
-    "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.1",
-    "date-fns": "^2.17.0",
-    "final-form": "^4.20.1",
-    "final-form-focus": "^1.1.2",
-    "firebase": "^8.2.1",
-    "fontsource-roboto": "^3.1.5",
     "mapbox-gl": "^2.3.0",
-    "re-reselect": "^4.0.0",
     "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.2",
-    "react-final-form": "^6.5.2",
     "react-map-gl": "^6.1.16",
     "react-mapbox-gl": "^5.1.1",
     "react-redux": "^7.2.2",
-    "react-redux-firebase": "^3.8.1",
     "react-scripts": "4.0.1",
     "redux-first-router": "^2.1.5",
     "redux-first-router-link": "^2.1.1",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,5 +42,12 @@
       "jest": true
     }
   },
-  "browserslist": [">0.3%", "not ie 11", "not dead", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all",
+    "not chrome < 51",
+    "not safari < 10"
+  ]
 }
